--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,4 @@
 [theme]
 backgroundColor="#000000"
-secondaryBackgroundColor="#210048"
-textColor="#ffe6e6"
+secondaryBackgroundColor="#180048"
+textColor="#fde3d0"
