--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#ff8300"
-backgroundColor="#000000"
-secondaryBackgroundColor="#180048"
-textColor="#fde3d0"
+primaryColor="#ff0004"
+backgroundColor="#c663cb"
+secondaryBackgroundColor="#cbcbcb"
+textColor="#000000"
