--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#ff0004"
-backgroundColor="#c663cb"
-secondaryBackgroundColor="#cbcbcb"
-textColor="#000000"
+primaryColor="#f7ff00"
+backgroundColor="#002146"
+secondaryBackgroundColor="#503d3d"
+textColor="#e88b8b"
