--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#f7ff00"
+primaryColor="#00ff00"
 backgroundColor="#002146"
 secondaryBackgroundColor="#503d3d"
 textColor="#ffa07a"
