--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#00ff00"
+primaryColor="#00af85"
 backgroundColor="#001937"
 secondaryBackgroundColor="#503d3d"
 textColor="#ffa07a"
