--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#00af85"
 backgroundColor="#001b3b"
-secondaryBackgroundColor="#352929"
-textColor="#f9e3b4"
+secondaryBackgroundColor="#000000"
+textColor="#fff1cf"
