--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#00af85"
+primaryColor="#00ff00"
 backgroundColor="#001b3b"
 secondaryBackgroundColor="#000000"
 textColor="#fff1cf"
