--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#ff4500"
+primaryColor="#ff8c00"
 backgroundColor="#001b3b"
 secondaryBackgroundColor="#000000"
 textColor="#ffdcc0"
