--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#ff7f50"
+primaryColor="#ff6347"
 backgroundColor="#001b3b"
 secondaryBackgroundColor="#000000"
 textColor="#ffdcc0"
